kakao html clone done

--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
       </header>
       <div class="friends__section-rows">
         <div class="friends__section-row">
-          <img src="" alt="">
-          <span class="firends__section-name">Nicolas</span>
+          <a href="profile.html">
+            <img src="images/avatar.jpg" alt="">
+            <span class="firends__section-name">Nicolas</span>
+          </a>
         </div>
         <div class="friends__section-row">
-          <img src="" alt="">
+          <img src="images/avatar.jpg" alt="">
           <span class="firends__section-name">Friend's Name Display</span>
         </div>
       </div>
