--- a/chat.html
+++ b/chat.html
@@ -28,7 +28,9 @@
     </div>
     <div class="header__bottom">
       <div class="header__column">
-        <i class="fa fa-chevron-left fa-lg"></i>
+        <a href="chats.html">
+          <i class="fa fa-chevron-left fa-lg"></i>
+        </a>
       </div>
       <div class="header__column">
         <span class="header__text">Lynn</span>
@@ -39,5 +41,36 @@
       </div>
     </div>
   </header>
+  <main class="chat">
+    <div class="date-divider">
+      <span class="date-divider__text">Wednesday, August 2, 2017</span>
+    </div>
+    <div class="chat__message chat__message-from-me">
+      <span class="chat__message-time">17:55</span>
+      <span class="chat__message-body">
+        Hello This is a test message
+      </span>
+    </div>
+    <div class="chat__message chat__message--to-me">
+      <img src="images/avatar.jpg" alt="" class="chat__message-avatar">
+      <div class="chat__message-center">
+        <h3 class="chat__message-username">Lynn</h3>
+        <span class="chat__message-body">
+          This is an answer
+        </span>
+      </div>
+      <span class="chat__message-time">19:35</span>
+    </div>
+  </main>
+  <div class="type-message">
+    <i class="fa fa-plus fa-2x"></i>
+    <div class="type-message__inpu">
+      <input type="text">
+      <i class="fa fa-smile-o"></i>
+      <span class="record-message">
+        <i class="fa fa-microphone"></i>
+      </span>
+    </div>
+  </div>
 </body>
 </html>
