--- a/chats.html
+++ b/chats.html
@@ -44,28 +44,32 @@
     </div>
     <ul class="chats__list">
       <li class="chats__chat">
-        <div class="chat__content">
-          <img src="images/avatar.jpg">
-          <div class="chat__preview">
-            <h3 class="chat__user">Lynn</h3>
-            <span class="chat__last-message">"Hello this is a test message"</span>
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">Lynn</h3>
+              <span class="chat__last-message">"Hello this is a test message"</span>
+            </div>
           </div>
-        </div>
-        <div class="chat__date-time">
-          15:55
-        </div>
+          <span class="chat__date-time">
+            15:55
+          </div>
+        </a>
       </li>
       <li class="chats__chat">
-        <div class="chat__content">
-          <img src="images/avatar.jpg">
-          <div class="chat__preview">
-            <h3 class="chat__user">KaKao Talk</h3>
-            <span class="chat__last-message">"You logged to Kakao""</span>
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">KaKao Talk</h3>
+              <span class="chat__last-message">"You logged to Kakao""</span>
+            </div>
           </div>
-        </div>
-        <div class="chat__date-time">
-          July 29
-        </div>
+          <span class="chat__date-time">
+            July 29
+          </span>
+        </a>
       </li>
     </ul>
     <div class="chat-btn">
