kakao clone css done

--- a/chats.html
+++ b/chats.html
@@ -55,7 +55,7 @@
           </div>
           <span class="chat__date-time">
             15:55
-          </div>
+          </span>
         </a>
       </li>
       <li class="chats__chat">
