--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
       <input type="text" placeholder="Find friends, chats, Plus friends">
     </div>
     <section class="friends__section">
-      <header class="friends__header">
+      <header class="friends__section-header">
         <h6 class="friends__section-title">My Profile</h6>
       </header>
       <div class="friends__section-rows">
         <div class="friends__section-row">
-          <a href="profile.html">
-            <img src="images/avatar.jpg" alt="">
-            <span class="firends__section-name">Nicolas</span>
+          <img src="images/avatar.jpg" alt="">
+          <a href="profile.html" class="firends__section-name">
+            Nicolas
           </a>
         </div>
         <div class="friends__section-row">
@@ -63,12 +63,12 @@
     </section>
     <section class="friends__section">
       <header>
-        <h6 class="friends__section-header"></h6>
+        <h6 class="friends__section-header">Friends</h6>
       </header>
       <div class="friends__section-rows">
-        <div class="friends__section-row">
+        <div class="friends__section-row with-tagline">
           <div class="friends__section-column">
-              <img src="" alt="">
+              <img src="images/avatar.jpg" alt="">
               <span class="firends__section-name">Nicolas</span>
           </div>
           <span class="friends__section-tagline">
